# scraper-siedco

./: .gitignore  README.md  pyproject.toml
scraper_siedco/: ___scraper.py  scraper.py
scraper_siedco/~/Documents/: 104fd0e8-8b8a-4876-aa97-c0f2484afc1d.xlsx
